🎨 Actualización Documentación de Codificación de variables categóricas

--- a/Laboratorio1.ipynb
+++ b/Laboratorio1.ipynb
@@ -1623,49 +1623,27 @@
    "source": [
     "## 3. Codificación de variables categóricas y escalado\n",
     "\n",
-    "**Variables categóricas identificadas:** 8 variables iniciales\n",
-    "\n",
     "**Eliminación de variables redundantes:**\n",
-    "- **Blood Pressure (mmHg)** eliminada (909 categorías únicas en formato texto \"118/72\")\n",
-    "- Esta variable ya está representada como **Systolic BP** y **Diastolic BP** en formato numérico\n",
-    "- Mantener la versión texto no aporta valor y complica la codificación\n",
+    "- **Blood Pressure (mmHg)** eliminada (909 categorías únicas, redundante con Systolic BP y Diastolic BP numéricos)\n",
     "\n",
-    "**Variables categóricas codificadas:** 7 variables\n",
-    "- Sex (2 categorías)\n",
-    "- Smoking Status (2 categorías)\n",
-    "- Diabetes Status (2 categorías)\n",
-    "- Physical Activity Level (3 categorías)\n",
-    "- Family History of CVD (2 categorías)\n",
-    "- Blood Pressure Category (4 categorías)\n",
-    "- CVD Risk Level (3 categorías)\n",
+    "**Variables categóricas codificadas (7):**\n",
     "\n",
-    "**Codificación aplicada:**\n",
-    "- Uso de **LabelEncoder** para convertir categorías a valores numéricos\n",
-    "- Cada variable categórica transformada a valores enteros (0, 1, 2, ...)\n",
-    "- Encoders ajustados con train y aplicados a train y test\n",
+    "| Variable | Categorías → Valores numéricos |\n",
+    "|----------|-------------------------------|\n",
+    "| Sex | M→1, F→0 |\n",
+    "| Smoking Status | Y→1, N→0 |\n",
+    "| Diabetes Status | Y→1, N→0 |\n",
+    "| Physical Activity Level | Low→0, Moderate→1, High→2 |\n",
+    "| Family History of CVD | Y→1, N→0 |\n",
+    "| Blood Pressure Category | Normal→0, Elevated→1, Hypertension Stage 1→2, Hypertension Stage 2→3 |\n",
+    "| CVD Risk Level | Low→0, Moderate→1, High→2 |\n",
     "\n",
-    "**Escalado de variables:**\n",
-    "- Aplicación de **StandardScaler** a TODAS las variables (13 numéricas + 7 categóricas codificadas)\n",
-    "- Normalización a media = 0 y desviación estándar = 1\n",
-    "- Scaler ajustado SOLO con train y aplicado a train y test\n",
+    "**Escalado:** StandardScaler normaliza todas las 20 variables (13 numéricas + 7 codificadas) a media=0, std=1\n",
     "\n",
-    "**Verificación del escalado:**\n",
-    "- Media del conjunto train: ≈ 0.0000000000\n",
-    "- Desviación estándar train: ≈ 1.0000\n",
+    "**Resultado:**\n",
+    "- X_train: 1,095 × 20 columnas | X_test: 365 × 20 columnas\n",
     "\n",
-    "**Resultado final:**\n",
-    "- X_train: 1,095 filas × 20 columnas (codificadas y escaladas)\n",
-    "- X_test: 365 filas × 20 columnas (codificadas y escaladas)\n",
-    "- y_train: 1,095 valores\n",
-    "- y_test: 365 valores\n",
-    "\n",
-    "**Justificación:**\n",
-    "- **Eliminación de Blood Pressure (mmHg)**: Variable redundante ya representada por Systolic BP y Diastolic BP en formato numérico más útil para el modelo\n",
-    "- **LabelEncoder**: Permite que el modelo trabaje con variables categóricas convirtiéndolas a números\n",
-    "- **StandardScaler**: Normaliza todas las variables para que contribuyan equitativamente al modelo\n",
-    "  - Evita que variables con escalas grandes (ej: Cholesterol 0-400) dominen sobre variables pequeñas (ej: Height 1.3-2.1)\n",
-    "  - Mejora la convergencia y rendimiento de la regresión lineal\n",
-    "- Ajustar transformaciones solo con train evita data leakage y sobreajuste"
+    "**Justificación:** LabelEncoder permite usar variables categóricas en regresión lineal. StandardScaler evita que variables de gran escala (ej: Cholesterol 0-400) dominen sobre variables pequeñas (ej: Height 1.3-2.1). Ajustar transformaciones solo con train previene data leakage."
    ]
   },
   {
